--- a/packages/markdown-block-editor-extensions/package.json
+++ b/packages/markdown-block-editor-extensions/package.json
@@ -22,6 +22,7 @@
 	"dependencies": {
 		"@mde/markdown-core": "file:../markdown-core",
 		"@mde/markdown-core-extensions": "file:../markdown-core-extensions",
+		"@wordpress/components": "^30.6.0",
 		"@wordpress/hooks": "^4.32.0"
 	}
 }
