--- a/packages/markdown-block-editor/package.json
+++ b/packages/markdown-block-editor/package.json
@@ -23,6 +23,7 @@
 		"@wordpress/api-fetch": "^7.21.0",
 		"@wordpress/block-editor": "^14.14.0",
 		"@wordpress/components": "^29.5.0",
+		"@wordpress/compose": "^7.34.0",
 		"@wordpress/data": "^10.21.0",
 		"@wordpress/editor": "^14.21.0",
 		"@wordpress/hooks": "^4.32.0",
