--- a/packages/markdown-block-editor/package.json
+++ b/packages/markdown-block-editor/package.json
@@ -6,8 +6,18 @@
 	"license": "GPL-2.0-or-later",
 	"main": "build/kurage/index.js",
 	"types": "dist/kurage/index.d.ts",
+	"files": [
+		"build",
+		"markdown-block-editor.php",
+		"prismjs",
+		"front-themes",
+		"languages",
+		"schema.json",
+		"readme.txt"
+	],
 	"scripts": {
 		"build": "wp-scripts build",
+		
 		"dev": "wp-scripts build --mode development",
 		"typing": "tsc -p tsconfig-types.json",
 		"now": "npx wp-now start",
@@ -18,7 +28,7 @@
 		"lint:css": "wp-scripts lint-style",
 		"lint:js": "wp-scripts lint-js",
 		"packages-update": "wp-scripts packages-update",
-		"plugin-zip": "wp-scripts plugin-zip",
+		"plugin-zip": "wp-scripts plugin-zip --root-folder='markdown-block-editor'",
 		"start": "wp-scripts start"
 	},
 	"dependencies": {
