ライセンス類の更新

--- a/packages/markdown-core-extensions/package.json
+++ b/packages/markdown-core-extensions/package.json
@@ -3,6 +3,15 @@
   "version": "1.0.0",
   "description": "",
   "main": "dist/index.js",
+  "licenses": [
+    {
+      "type": "UNLICENSED"
+    },
+    {
+      "type": "Kurage Origin License",
+      "url": "https://kurage.dev/license"
+    }
+  ],
   "types": "./dist/index.d.ts",
   "scripts": {
     "build": "tsc && pnpm run cp && pnpm run build:types",
