--- a/packages/markdown-block-editor/package.json
+++ b/packages/markdown-block-editor/package.json
@@ -21,7 +21,7 @@
 		"build": "wp-scripts build",
 		"dev": "wp-scripts build --mode development",
 		"typing": "tsc -p tsconfig-types.json",
-		"now": "pnpm dlx @wp-now/wp-now start",
+		"now": "pnpm dlx @wp-now/wp-now start --php=8.2",
 		"build:types": "rm tsconfig.tsbuildinfo && tsc --emitDeclarationOnly --declaration --outDir build/",
 		"all": "../build.sh",
 		"format": "wp-scripts format",
